--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   dartz: ^0.10.1
   shared_preferences: ^2.3.2
   connectivity_plus: ^6.0.5
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
