--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   shared_preferences: ^2.3.2
   connectivity_plus: ^6.0.5
   equatable: ^2.0.5
+  flutter_screenutil: ^5.9.3
 
 dev_dependencies:
   flutter_test:
